Tabla dinamica DTs

--- a/Torneo.App.Frontend/Pages/Shared/_Layout.cshtml
+++ b/Torneo.App.Frontend/Pages/Shared/_Layout.cshtml
@@ -23,7 +23,10 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Index">Municipios</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Municipios/Index">Municipios</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/DTs/Index">Directores Técnicos</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
