--- a/Torneo.App.Frontend/Pages/Municipios/Index.cshtml
+++ b/Torneo.App.Frontend/Pages/Municipios/Index.cshtml
@@ -3,3 +3,21 @@
 @{
 }
 <h1>Listado de municipios</h1>
+<table class = "table">
+    <thead class="thead/dark">
+        <tr>
+            <th scope="col">Id</th>
+            <th scope="col">Nombre</th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var municipio in Model.municipios)
+        {
+            <tr>
+                <th>@municipio.Id</th>
+                <th>@municipio.Nombre</th>
+            </tr>
+            
+        }
+    </tbody>
+</table>
