--- a/Torneo.App.Frontend/Pages/DTs/Index.cshtml
+++ b/Torneo.App.Frontend/Pages/DTs/Index.cshtml
@@ -8,6 +8,7 @@
         <tr>
             <th scope="col">Id</th>
             <th scope="col">Nombre</th>
+            <th scope="col">Acciones</th>
         </tr>
     </thead>
     <tbody>
