--- a/Torneo.App.Frontend/Pages/Municipios/Index.cshtml
+++ b/Torneo.App.Frontend/Pages/Municipios/Index.cshtml
@@ -3,11 +3,12 @@
 @{
 }
 <h1>Listado de municipios</h1>
-<table class = "table">
+<table class="table">
     <thead class="thead/dark">
         <tr>
             <th scope="col">Id</th>
             <th scope="col">Nombre</th>
+            <th scope="col">Acciones</th>
         </tr>
     </thead>
     <tbody>
@@ -15,9 +16,15 @@
         {
             <tr>
                 <th>@municipio.Id</th>
-                <th>@municipio.Nombre</th>
+                <td>@municipio.Nombre</td>
+                <td>
+                    <a class="btn btn-success" asp-page="./Details" asp-route-id="@municipio.Id">
+                        <u>Detalle</u>
+                    </a>
+                </td>
+
             </tr>
-            
+
         }
     </tbody>
 </table>
