Details and create

--- a/Torneo.App.Frontend/Pages/Equipos/Index.cshtml
+++ b/Torneo.App.Frontend/Pages/Equipos/Index.cshtml
@@ -20,7 +20,7 @@
                 <td>@equipo.Nombre</td>
                 <td>@equipo.Municipio.Nombre</td>
                 <td>
-                    <a class="btn btn-primary" asp-page="./Details" asp-route-id="@equipo.Id">
+                    <a class="btn btn-success" asp-page="./Details" asp-route-id="@equipo.Id">
                         Detalle
                     </a>
                 </td>
