--- a/Torneo.App.Frontend/Pages/Municipios/Index.cshtml
+++ b/Torneo.App.Frontend/Pages/Municipios/Index.cshtml
@@ -2,6 +2,7 @@
 @model Torneo.App.Frontend.Pages.Municipios.IndexModel
 @{
 }
+<a class="btn btn-success" asp-page="./Create">Crear Municipio</a>
 <h1>Listado de municipios</h1>
 <table class="table">
     <thead class="thead/dark">
