--- a/Torneo.App.Frontend/Pages/DTs/Index.cshtml
+++ b/Torneo.App.Frontend/Pages/DTs/Index.cshtml
@@ -2,6 +2,7 @@
 @model Torneo.App.Frontend.Pages.DTs.IndexModel
 @{
 }
+<a class="btn btn-success" asp-page="./Create">Crear Director Técnico</a>
 <h1>Listado de directores tecnicos</h1>
 <table class="table table-hover">
     <thead>
@@ -17,6 +18,11 @@
             <tr>
                 <th scope="row">@dt.Id</th>
                 <td>@dt.Nombre</td>
+                <td>
+                    <a class="btn btn-success" asp-page="./Details" asp-route-id="@dt.Id">
+                        <u>Detalle</u>
+                    </a>
+                </td>
             </tr>
 
         }
