--- a/Torneo.App.Frontend/Pages/Equipos/Index.cshtml
+++ b/Torneo.App.Frontend/Pages/Equipos/Index.cshtml
@@ -2,6 +2,7 @@
 @model Torneo.App.Frontend.Pages.Equipos.IndexModel
 @{
 }
+<a class="btn btn-success" asp-page="./Create">Crear Equipo</a>
 <h1>Listado de Equipos</h1>
 <table class="table table-success table-striped">
     <thead>
