--- a/Torneo.App.Frontend/Pages/DTs/Details.cshtml
+++ b/Torneo.App.Frontend/Pages/DTs/Details.cshtml
@@ -12,5 +12,13 @@
         <th scope="col">Nombre</th>
         <td>@Model.directorTecnico.Nombre</td>
     </tr>
+    <tr>
+        <th scope="col">Documento</th>
+        <td>@Model.directorTecnico.Documento</td>
+    </tr>
+    <tr>
+        <th scope="col">Teléfono</th>
+        <td>@Model.directorTecnico.Telefono</td>
+    </tr>
 </table>
 <a class="btn btn-primary" asp-page="./Index">Volver</a>
