--- a/Torneo.App.Frontend/Pages/Partidos/Index.cshtml
+++ b/Torneo.App.Frontend/Pages/Partidos/Index.cshtml
@@ -2,7 +2,7 @@
 @model Torneo.App.Frontend.Pages.Partidos.IndexModel
 @{
 }
-<a class="btn btn-success" asp-page="./Create">Crear Partido</a>
+@* :<a class="btn btn-success" asp-page="./Create">Crear Partido</a> *@
 <h1>Listado de Partidos</h1>
 <table class="table table-success table-striped">
     <thead>
