index details posicion

--- a/Torneo.App.Frontend/Pages/Posiciones/Index.cshtml
+++ b/Torneo.App.Frontend/Pages/Posiciones/Index.cshtml
@@ -2,3 +2,30 @@
 @model Torneo.App.Frontend.Pages.Posiciones.IndexModel
 @{
 }
+<a class="btn btn-success" asp-page="./Create">Crear Posicion</a>
+<h1>Listado de posiciones</h1>
+<table class="table">
+    <thead class="thead/dark">
+        <tr>
+            <th scope="col">Id</th>
+            <th scope="col">Nombre</th>
+            <th scope="col">Acciones</th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var posicion in Model.posiciones)
+        {
+            <tr>
+                <th>@posicion.Id</th>
+                <td>@posicion.Nombre</td>
+                <td>
+                    <a class="btn btn-success" asp-page="./Details" asp-route-id="@posicion.Id">
+                        <u>Detalle</u>
+                    </a>
+                </td>
+
+            </tr>
+
+        }
+    </tbody>
+</table>
