--- a/Torneo.App.Frontend/Pages/Municipios/Create.cshtml
+++ b/Torneo.App.Frontend/Pages/Municipios/Create.cshtml
@@ -6,7 +6,7 @@
 <form method="post">
     <div class="form-group">
         <label asp-for="municipio.Nombre"></label>
-        <input asp-for="municipio.Nombre" class="form-control">
+        <input asp-for="municipio.Nombre" class="form-control" placeholder="Ingrese el nombre del municipio">
     </div>
     <button type="submit" class="btn btn-primary btn-block">Crear municipio</button>
 </form>
