--- a/Torneo.App.Frontend/Pages/Municipios/Index.cshtml
+++ b/Torneo.App.Frontend/Pages/Municipios/Index.cshtml
@@ -22,6 +22,10 @@
                     <a class="btn btn-success" asp-page="./Details" asp-route-id="@municipio.Id">
                         <u>Detalle</u>
                     </a>
+                    <a class="btn btn-secondary" asp-page="./Edit" asp-route-id="@municipio.Id">
+                        Editar
+                    </a>
+                    
                 </td>
 
             </tr>
