--- a/Torneo.App.Frontend/Pages/Estadios/Index.cshtml
+++ b/Torneo.App.Frontend/Pages/Estadios/Index.cshtml
@@ -2,6 +2,7 @@
 @model Torneo.App.Frontend.Pages.Estadios.IndexModel
 @{
 }
+<a class="btn btn-primary" asp-page="./Create">Crear estadio</a>
 <h1>Listado de Estadios</h1>
 <table class="table table-dark table-striped table-hover">
     <thead class="thead/dark">
