--- a/Torneo.App.Frontend/Pages/Partidos/Index.cshtml
+++ b/Torneo.App.Frontend/Pages/Partidos/Index.cshtml
@@ -3,7 +3,8 @@
 @{
 }
 @* :<a class="btn btn-success" asp-page="./Create">Crear Partido</a> *@
-<h1>Listado de Partidos</h1>
+<link rel="stylesheet" href="./../Shared/_Layout.cshtml.css">
+<h1 class="center">Listado de Partidos</h1>
 <table class="table table-success table-striped">
     <thead>
         <tr>
