Index and Details Arbitros

--- a/Torneo.App.Frontend/Pages/Arbitros/Details.cshtml
+++ b/Torneo.App.Frontend/Pages/Arbitros/Details.cshtml
@@ -20,5 +20,9 @@
         <th scope="col">Telefono</th>
         <td>@Model.arbitro.Telefono</td>
     </tr>
+    <tr>
+        <th scope="col">Colegio</th>
+        <td>@Model.arbitro.Colegio</td>
+    </tr>
 </table>
 <a class="btn btn-primary" asp-page="./Index">Volver</a>
