--- a/Torneo.App.Frontend/Pages/Arbitros/Index.cshtml
+++ b/Torneo.App.Frontend/Pages/Arbitros/Index.cshtml
@@ -17,7 +17,7 @@
         {
 
             <tr>
-                <th scope="row">@arbitro.Id</th>
+                <th>@arbitro.Id</th>
                 <td>@arbitro.Nombre</td>
                 <td>
                     <a class="btn btn-primary" asp-page="./Details" asp-route-id="@arbitro.Id">
